@@ -22,8 +22,10 @@ size_t CircleBufferSize(const struct CircleBuffer* buffer);
 size_t CircleBufferCapacity(const struct CircleBuffer* buffer);
 void CircleBufferClear(struct CircleBuffer* buffer);
 int CircleBufferWrite8(struct CircleBuffer* buffer, int8_t value);
+int CircleBufferWrite16(struct CircleBuffer* buffer, int16_t value);
 int CircleBufferWrite32(struct CircleBuffer* buffer, int32_t value);
 int CircleBufferRead8(struct CircleBuffer* buffer, int8_t* value);
+int CircleBufferRead16(struct CircleBuffer* buffer, int16_t* value);
 int CircleBufferRead32(struct CircleBuffer* buffer, int32_t* value);
 size_t CircleBufferRead(struct CircleBuffer* buffer, void* output, size_t length);
 size_t CircleBufferDump(const struct CircleBuffer* buffer, void* output, size_t length);
