@@ -18,6 +18,7 @@ Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
  - Qt: Handle a game crash without crashing
+ - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
 
 0.1.0: (2014-12-13)
  - Initial release
